JS-2: Fix default language fallback and copying translations

--- a/src/app/about/components/about.html
+++ b/src/app/about/components/about.html
@@ -5,4 +5,4 @@
   <button type="button" (click)="translationService.setLanguage('ar')">Arabic</button>
   <button type="button" (click)="translationService.setLanguage('ku')">Kurdish</button>
 </div>
-<div>{{'company.assignments.candidates.send_request' | translate:{candidate_name: 'Some user'} }}</div>
+<div>{{'user.assignment.confirmation.description' | translate:{candidate_name: 'Some user'} }}</div>
