JS-21: Add link to home in app.component

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
   <nav>
+    <a routerLink="/home">Home</a>
     <a routerLink="/tasks">Task List</a>
     <a routerLink="/about">About</a>
   </nav>
