--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -2,3 +2,4 @@
 <input [(ngModel)]="email" placeholder="email" type="text">
 <input [(ngModel)]="password" type="password" placeholder="password">
 <button (click)="login()">Login</button>
+<slider></slider>
