--- a/app/components/slider/slider.component.html
+++ b/app/components/slider/slider.component.html
@@ -1,7 +1,7 @@
 <div class="slider" (window:resize)="resize()">
-  <div class="slider-container" (mousedown)="mouseDown($event)" (mouseup)="mouseUp($event)" (mouseout)="mouseUp()" (mousemove)="mouseMove($event)">
+  <div class="slider-container" (swipeleft)="swipeLeft($event)" (swiperight)="swipeRight()">
     <div class="slider-item">1</div>
     <div class="slider-item">2</div>
-    <div class="slider-item">3</div>
+    <div class="slider-item">3<br>test</div>
   </div>
 </div>
