--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -14,3 +14,10 @@ $color-gray-3: #E8EBEE; // lightGrey
 $color-pink-0: #971057; // berry
 $color-pink-1: #c3106c; // cerice
 $color-pink-2: #E5007D; // pink
+
+$fs-m0: 14px;
+$fs-m: 16px;
+$fs-l: 18px;
+$fs-xl: 22px;
+$fs-xxl: 24px;
+$fs-xxxl: 32px;
