JS-5: Add have account text and link to login

--- a/app/views/user/user-register/user-register.component.html
+++ b/app/views/user/user-register/user-register.component.html
@@ -1,6 +1,6 @@
 <div class="user-register">
   <div class="header">
-    <div class="header-title">{{'user.create.title' | translate | uppercase}}</div>
+    <div class="fs-l">{{'user.create.title' | translate | uppercase}}</div>
     <div class="header-text">{{'user.create.description' | translate}}</div>
   </div>
 
@@ -60,4 +60,11 @@
 
     <button type="submit">{{'common.continue' | translate}}</button>
   </form>
+
+  <div>
+    <div class="have-account-text">{{'common.have_account' | translate}}</div>
+    <div>
+      <a routerLink="/home" class="fs-m">{{'common.login' | translate}}</a>
+    </div>
+  </div>
 </div>
