--- a/app/views/user/user-register/user-register.component.scss
+++ b/app/views/user/user-register/user-register.component.scss
@@ -5,6 +5,13 @@
     color: $color-blue-3;
   }
 
+  form {
+    width: 85%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 35px 0;
+  }
+
   .header {
     padding: 30px;
     background: $color-blue-1;
