JS-5: Add arrived at field in user registration component

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,14 @@ body {
     }
   }
 
+  input {
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  input[type="date"] {
+    text-transform: uppercase;
+  }
+
   .inline-block {
     display: inline-block;
   }
