--- a/app/views/user/user-register/user-register.component.html
+++ b/app/views/user/user-register/user-register.component.html
@@ -140,8 +140,8 @@
     </div>
 
     <div class="form-group text-center">
-      <input type="checkbox" id="terms">
-      <label for="terms">
+      <input type="checkbox" id="tac" name="tac" [(ngModel)]="user.acceptedTermsAndConditions" required>
+      <label for="tac">
         {{'terms.accept' | translate}} {{'terms' | translate}}
         <a href="app/assets/terms/160523_2051-2_Terms_and_Conditions_(en).pdf" target="_blank"> PDF EN</a>,
         <a href="app/assets/terms/160520_2051-2_Anvandarvillkor_(sv).pdf" target="_blank"> PDF SV</a>
