--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'variables.scss';
+@import url("../assets/fonts/fontello.css");
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -46,5 +47,21 @@ body {
   }
   .color-pink-2 {
     color: $color-pink-2;
+  }
+
+  .button {
+    border: 1px solid #FFFFFF;
+    color: #FFFFFF;
+    text-decoration: none;
+    height: 45px;
+    line-height: 43px;
+    text-align: center;
+    border-radius: 23px;
+    background: none;
+    padding: 0 20px;
+    width: auto;
+    margin-top: 15px;
+    font-size: 1.2em;
+    display: inline-block;
   }
 }
